Add new empirical results, tables, and figures
Added new LaTeX source, output, and auxiliary files for empirical analysis, including new tables and figures for IE2 and IE3 experiments. Updated existing tables and figures to reflect new results and expanded the set of outputs for documentation and presentation.

--- a/Tables/IE2_within_group_dispersion.tex
+++ b/Tables/IE2_within_group_dispersion.tex
@@ -7,13 +7,14 @@
             &\multicolumn{5}{c}{}                                            \\
             &        mean&          sd&         min&         max&       count\\
 \hline
-z\_offer     &    .1930441&    .1193585&           0&    .9220387&       88324\\
-z\_offer2    &    .0651742&    .0525936&           0&    .4111664&       24022\\
-sd\_offer2   &    .4973616&    .5770213&           0&    6.349819&       24022\\
-z\_ratio     &    .0770126&    .0300375&    .0002599&     .286424&       88324\\
-z\_ratio2    &    .0647065&     .052319&           0&    .4111664&       24022\\
+z\_offer     &    .1884389&    .1181447&           0&    .7557784&       16629\\
+z\_offer2    &    .0575088&    .0565368&           0&    .2664843&        1071\\
+z\_offer3    &    .0315437&    .0299398&    .0039837&    .1975835&       17250\\
+sd\_offer2   &    .4563789&    .7323914&           0&    5.550788&        1071\\
+z\_ratio     &    .0769811&    .0340353&     .000152&     .269332&       16629\\
+z\_ratio2    &    .0571428&    .0561071&           0&    .2664843&        1071\\
 \hline
-\(N\)       &       88324&            &            &            &            \\
+\(N\)       &       17265&            &            &            &            \\
 \hline\hline
 \end{tabular}
 \end{table}
