--- a/model2.tex
+++ b/model2.tex
@@ -74,6 +74,37 @@
 %\author{Lucas Condeza\thanks{Yale University %\texttt{lucas.schmitz@yale.edu}}} 
 %\date{}
 %\maketitle
+\section*{Literature on search and some comments}
+
+Models of search in \textcite{gavazza_frictions_2021}
+\begin{enumerate}
+    \item Informed vs uninformed: Varian (1980). Also referred as to shoppers and non-shoppers. 
+    \item Simultaneous search:  Burdett and Judd (1983). One decides ex-ante the number of searches 
+    \item Sequential search: Rothschild (1973) 
+\end{enumerate}
+
+
+Models of search (Ellison) 
+\begin{enumerate}
+    \item Diamond (1971)
+    \item Heterogenous search
+    
+    Stahl (89) shoppers and non-shoppers as in Varian but the non-shoppers have a search cost hence their search is endogenous, moreover there is heterogeneity among the non shoppers. 
+
+    \item Clearinghouse: you pay a fixed cost to know all the alternatives and if you do not pay it you are directed to a default option. (Baye and Morgan 2001)
+
+\end{enumerate}
+
+
+\subsection*{Comments}
+\begin{itemize}
+    \item Undirected search is the idea that the consumer requests quotes randomly, I think it simplifies the problem. 
+    
+    \item why is it that we do not observe the Diamond paradox in Varian(1980)? 
+    
+    - because buyers do not optimally select how much to search. some individuals search all the options and others none. a way of justifying it is that some have an infinite search cost and others zero search cost, hence neither of the two groups changes their search behavior when prices change. 
+\end{itemize}
+
 
 
 
