Updates from Overleaf

--- a/literature.tex
+++ b/literature.tex
@@ -111,7 +111,11 @@ What seems a bigger hurdle is that there is no price posting. -> this is not a p
 
 
 \section{Adverse selection and competition}
+CHECK HANDEL JMP, HANDEL'S FRISCH MEDAL PAPER ... .
 
+
+
+\section{Insurance}
 \section{Papers with the same data}
 
 There are two papers that use the same data: 
