--- a/proposal.tex
+++ b/proposal.tex
@@ -227,6 +227,9 @@ The great advantage of the setting and associated data is that 1. we observe the
 
 Other aspects that are interesting of our context is that in standard models of insurance markets firms compet either in price (Akerlof 70) or price and coverage (Rothschild and Stiglitz 76). In our case consumers by choosing the number of guaranteed periods can themselves determine something akin to the coverage, which changes the way firms compete.  
 
+
+There are a couple of other markets where sellers post a price and then the buyer can bargain with the seller, e.g. car dealerships and the housing markets where if you go to Zillow you have a price but you can always contact the seller to get a better price. The difference is that in those markets the buyer has less information than the seller whereas in our case is the opposite.  
+
 \section{Research questions}
 
 \begin{itemize}
