Updates from Overleaf

--- a/literature.tex
+++ b/literature.tex
@@ -110,12 +110,20 @@ What seems a bigger hurdle is that there is no price posting. -> this is not a p
 
 
 
-\section{Adverse selection and competition}
+\section{Selection markets and competition}
+The relevant papers are: 
+\begin{itemize}
+    \item \textcite{mahoney_imperfect_2017} studies imperfect competition in insurance markets, but is a theorice paper and makes the assumption that firms are symmetric. but is in the right track. 
+\end{itemize}
+
+
 CHECK HANDEL JMP, HANDEL'S FRISCH MEDAL PAPER ... .
 
 
 
-\section{Insurance}
+
+
+
 \section{Papers with the same data}
 
 There are two papers that use the same data: 
