--- a/proposal.tex
+++ b/proposal.tex
@@ -420,6 +420,13 @@ Some aspects we are leaving out of the model and could potentially be included i
 
     \item Related to the previous point, we assume no new information is revealed when asking for external offers.
 \end{itemize}
+
+
+
+\textbf{Comments}
+\begin{itemize}
+    \item In our previous model is crucial to estimate the survival probabilities $F_k$, the mortality tables provided by the regulator are probabilities for the whole population, but if there is selection the survival probabilities of the buyers will be different to the ones of the regulator. 
+\end{itemize}
 \vspace{4cm}
 
 \section{Estimation}
