--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,172 @@
 
+@article{mahoney_imperfect_2017,
+	title = {Imperfect {Competition} in {Selection} {Markets}},
+	volume = {99},
+	issn = {0034-6535},
+	url = {https://doi.org/10.1162/REST_a_00661},
+	doi = {10.1162/REST_a_00661},
+	abstract = {Policies to correct market power and selection can be misguided when these forces coexist. We build a model of symmetric imperfect competition in selection markets that parameterizes the degree of market power and selection. We use graphical price-theoretic reasoning to characterize the interaction between these forces. Using a calibrated model of health insurance, we show that the risk adjustment commonly used to offset adverse selection can reduce coverage and social surplus. Conversely, in a calibrated model of subprime auto lending, realistic levels of competition can generate an oversupply of credit, implying that greater market power is desirable.},
+	number = {4},
+	urldate = {2025-07-27},
+	journal = {The Review of Economics and Statistics},
+	author = {Mahoney, Neale and Weyl, E. Glen},
+	month = oct,
+	year = {2017},
+	pages = {637--651},
+}
+
+@article{azevedo_perfect_2017,
+	title = {Perfect {Competition} in {Markets} {With} {Adverse} {Selection}},
+	volume = {85},
+	copyright = {© 2017 The Econometric Society},
+	issn = {1468-0262},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.3982/ECTA13434},
+	doi = {10.3982/ECTA13434},
+	abstract = {This paper proposes a perfectly competitive model of a market with adverse selection. Prices are determined by zero-profit conditions, and the set of traded contracts is determined by free entry. Crucially for applications, contract characteristics are endogenously determined, consumers may have multiple dimensions of private information, and an equilibrium always exists. Equilibrium corresponds to the limit of a differentiated products Bertrand game. We apply the model to establish theoretical results on the equilibrium effects of mandates. Mandates can increase efficiency but have unintended consequences. With adverse selection, an insurance mandate reduces the price of low-coverage policies, which necessarily has indirect effects such as increasing adverse selection on the intensive margin and causing some consumers to purchase less coverage.},
+	language = {en},
+	number = {1},
+	urldate = {2025-07-27},
+	journal = {Econometrica},
+	author = {Azevedo, Eduardo M. and Gottlieb, Daniel},
+	year = {2017},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.3982/ECTA13434},
+	keywords = {Adverse selection, contract theory, general equilibrium},
+	pages = {67--105},
+}
+
+@book{manning_monopsony_2003,
+	address = {Princeton, N.J},
+	title = {Monopsony in motion: imperfect competition in labor markets},
+	isbn = {978-0-691-11312-8},
+	shorttitle = {Monopsony in motion},
+	language = {en},
+	publisher = {Princeton University Press},
+	author = {Manning, Alan},
+	year = {2003},
+	keywords = {Competition, Great Britain, Labor economics, Labor market, Mathematical models, Monopsonies, United States, Wages},
+}
+
+@article{handel_adverse_2013,
+	title = {Adverse {Selection} and {Inertia} in {Health} {Insurance} {Markets}: {When} {Nudging} {Hurts}},
+	volume = {103},
+	issn = {0002-8282},
+	shorttitle = {Adverse {Selection} and {Inertia} in {Health} {Insurance} {Markets}},
+	url = {https://pubs.aeaweb.org/doi/10.1257/aer.103.7.2643},
+	doi = {10.1257/aer.103.7.2643},
+	abstract = {This paper investigates consumer inertia in health insurance markets, where adverse selection is a potential concern. We leverage a major change to insurance provision that occurred at a large firm to identify substantial inertia, and develop and estimate a choice model that also quantifies risk preferences and ex ante health risk. We use these estimates to study the impact of policies that nudge consumers toward better decisions by reducing inertia. When aggregated, these improved individual-level choices substantially exacerbate adverse selection in our setting, leading to an overall reduction in welfare that doubles the existing welfare loss from adverse selection. (JEL D82, G22, I13)},
+	language = {en},
+	number = {7},
+	urldate = {2025-07-25},
+	journal = {American Economic Review},
+	author = {Handel, Benjamin R},
+	month = dec,
+	year = {2013},
+	note = {Publisher: American Economic Association},
+	pages = {2643--2682},
+}
+
+@article{finkelstein_adverse_2004,
+	title = {Adverse {Selection} in {Insurance} {Markets}: {Policyholder} {Evidence} from                     the {U}.{K}. {Annuity} {Market}},
+	volume = {112},
+	issn = {0022-3808, 1537-534X},
+	shorttitle = {Adverse {Selection} in {Insurance} {Markets}},
+	url = {https://www.journals.uchicago.edu/doi/10.1086/379936},
+	doi = {10.1086/379936},
+	language = {en},
+	number = {1},
+	urldate = {2025-07-25},
+	journal = {Journal of Political Economy},
+	author = {Finkelstein, Amy and Poterba, James},
+	month = feb,
+	year = {2004},
+	note = {Publisher: University of Chicago Press},
+	pages = {183--208},
+}
+
+@article{handel_equilibria_2015,
+	title = {Equilibria in {Health} {Exchanges}: {Adverse} {Selection} versus {Reclassification} {Risk}},
+	volume = {83},
+	copyright = {http://doi.wiley.com/10.1002/tdm\_license\_1.1},
+	issn = {0012-9682},
+	shorttitle = {Equilibria in {Health} {Exchanges}},
+	url = {https://www.econometricsociety.org/doi/10.3982/ECTA12480},
+	doi = {10.3982/ecta12480},
+	abstract = {This paper studies regulated health insurance markets known as exchanges, motivated by the increasingly important role they play in both public and private insurance provision. We develop a framework that combines data on health outcomes and insurance plan choices for a population of insured individuals with a model of a competitive insurance exchange to predict outcomes under different exchange designs. We apply this framework to examine the effects of regulations that govern insurers’ ability to use health status information in pricing. We investigate the welfare implications of these regulations with an emphasis on two potential sources of inefﬁciency: (i) adverse selection and (ii) premium reclassiﬁcation risk. We ﬁnd substantial adverse selection leading to full unraveling of our simulated exchange, even when age can be priced. While the welfare cost of adverse selection is substantial when health status cannot be priced, that of reclassiﬁcation risk is ﬁve times larger when insurers can price based on some health status information. We investigate several extensions including (i) contract design regulation, (ii) self-insurance through saving and borrowing, and (iii) insurer risk adjustment transfers.},
+	language = {en},
+	number = {4},
+	urldate = {2025-07-25},
+	journal = {Econometrica},
+	author = {Handel, Ben and Hendel, Igal and Whinston, Michael D.},
+	year = {2015},
+	note = {Publisher: The Econometric Society},
+	pages = {1261--1313},
+}
+
+@article{weitzman_recombinant_1998,
+	title = {Recombinant {Growth}},
+	volume = {113},
+	issn = {0033-5533, 1531-4650},
+	url = {https://academic.oup.com/qje/article-lookup/doi/10.1162/003355398555595},
+	doi = {10.1162/003355398555595},
+	language = {en},
+	number = {2},
+	urldate = {2025-07-25},
+	journal = {The Quarterly Journal of Economics},
+	author = {Weitzman, M. L.},
+	month = may,
+	year = {1998},
+	note = {Publisher: Oxford University Press (OUP)},
+	pages = {331--360},
+}
+
+@misc{noauthor_chatgpt_nodate,
+	title = {{ChatGPT}},
+	url = {https://chatgpt.com},
+	abstract = {A conversational AI system that listens, learns, and challenges},
+	language = {en-US},
+	urldate = {2025-07-08},
+}
+
+@article{burdett_equilibrium_1983,
+	title = {Equilibrium {Price} {Dispersion}},
+	volume = {51},
+	issn = {0012-9682},
+	url = {https://www.jstor.org/stable/1912045},
+	doi = {10.2307/1912045},
+	abstract = {It is shown that wquilibria with dispersed prices exist in environments with identical and rational agents on both sides of the market. In particular, the original Stigler model of nonsequential search often has many equilibria, some with price dispersion. Also, price dispersion holds in equilibrium in general if search is "noisy," i.e., there is some chance of learning two or more prices when an agent is looking for one price.},
+	number = {4},
+	urldate = {2025-07-06},
+	journal = {Econometrica},
+	author = {Burdett, Kenneth and Judd, Kenneth L.},
+	year = {1983},
+	note = {Publisher: [Wiley, Econometric Society]},
+	keywords = {IO: search},
+	pages = {955--969},
+}
+
+@incollection{gavazza_frictions_2021,
+	title = {Frictions in product markets},
+	volume = {4},
+	isbn = {978-0-323-91513-7},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1573448X21000066},
+	language = {en},
+	urldate = {2023-02-19},
+	booktitle = {Handbook of {Industrial} {Organization}},
+	publisher = {Elsevier},
+	author = {Gavazza, Alessandro and Lizzeri, Alessandro},
+	year = {2021},
+	doi = {10.1016/bs.hesind.2021.11.006},
+	keywords = {F: IO, IO: auctions, IO: search},
+	pages = {433--484},
+}
+
+@article{stigler_economics_nodate,
+	title = {The {Economics} of {Information}},
+	language = {en},
+	author = {Stigler, George J},
+	keywords = {IO: search},
+}
+
 @misc{superintendencia_de_pensiones_compendio_nodate,
 	title = {Compendio de {Normas} del {Sistema} de {Pensiones} {Libro} {III}, {Titulo} {II}.},
 	url = {https://www.spensiones.cl/portal/compendio/596/w3-propertyvalue-2815.html},
@@ -797,10 +965,6 @@
 	author = {Hendren, Nathaniel},
 }
 
-@misc{noauthor_solicitud_nodate,
-	title = {Solicitud de ofertas},
-}
-
 @misc{noauthor_lecture_annuities_nodate,
 	title = {Lecture\_Annuities},
 }
@@ -1482,22 +1646,6 @@
 }
 
 @techreport{asker_two_2024,
-	address = {Cambridge, MA},
-	title = {Two {Wrongs} {Can} {Sometimes} {Make} a {Right}: {The} {Environmental} {Benefits} of {Market} {Power} in {Oil}},
-	shorttitle = {Two {Wrongs} {Can} {Sometimes} {Make} a {Right}},
-	url = {http://www.nber.org/papers/w33115.pdf},
-	language = {en},
-	number = {w33115},
-	urldate = {2025-03-24},
-	institution = {National Bureau of Economic Research},
-	author = {Asker, John and Collard-Wexler, Allan and De Canniere, Charlotte and De Loecker, Jan and Knittel, Christopher},
-	month = nov,
-	year = {2024},
-	doi = {10.3386/w33115},
-	pages = {w33115},
-}
-
-@techreport{asker_two_2024-1,
 	title = {Two {Wrongs} {Can} {Sometimes} {Make} a {Right}: {The} {Environmental} {Benefits} of {Market} {Power} in {Oil}},
 	shorttitle = {Two {Wrongs} {Can} {Sometimes} {Make} a {Right}},
 	url = {https://www.nber.org/papers/w33115},
@@ -2145,22 +2293,6 @@
 	pages = {w26675},
 }
 
-@incollection{gavazza_frictions_2021,
-	title = {Frictions in product markets},
-	volume = {4},
-	isbn = {978-0-323-91513-7},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S1573448X21000066},
-	language = {en},
-	urldate = {2023-02-19},
-	booktitle = {Handbook of {Industrial} {Organization}},
-	publisher = {Elsevier},
-	author = {Gavazza, Alessandro and Lizzeri, Alessandro},
-	year = {2021},
-	doi = {10.1016/bs.hesind.2021.11.006},
-	keywords = {F: IO, IO: auctions},
-	pages = {433--484},
-}
-
 @article{card_who_2022,
 	title = {Who {Set} {Your} {Wage}?},
 	volume = {112},
@@ -2247,7 +2379,7 @@
 	pages = {475--490},
 }
 
-@techreport{kroft_imperfect_2020-1,
+@techreport{kroft_imperfect_2020,
 	address = {Cambridge, MA},
 	title = {Imperfect {Competition} and {Rents} in {Labor} and {Product} {Markets}: {The} {Case} of the {Construction} {Industry}},
 	shorttitle = {Imperfect {Competition} and {Rents} in {Labor} and {Product} {Markets}},
@@ -10257,7 +10389,7 @@ and has welfare implications. For instance, although alternative dispatch platfo
 	pages = {405--431},
 }
 
-@article{banerjee_informed_nodate,
+@article{banerjee_informed_nodate-1,
 	title = {Do {Informed} {Voters} {Make} {Better} {Choices}? {Experimental} {Evidence} from {Urban} {India}},
 	abstract = {In the run-up to elections in a large Indian city, residents in a random sample of slums received newspapers containing report cards on politicians. The report card for a jurisdiction presented information, obtained under India’s disclosure laws, on the performance of the incumbent legislator and the qualiﬁcations of the incumbent and two main challengers. Relative to the control slums, treatment slums saw higher turnout, reduced vote buying, and higher vote share for better performing incumbents and relatively more qualiﬁed incumbents. Moreover, voters demonstrated sophistication in how they use report card information to judge performance and qualiﬁcations – they used their knowledge on the incidence of public good spending in slums to evaluate jurisdiction-level information on public good spending by the incumbent, and used challenger qualiﬁcations as a yardstick to judge incumbent qualiﬁcations.},
 	language = {en},
@@ -14427,13 +14559,13 @@ on one side of the market take advantage of consumers' lack of knowledge and exp
 	year = {2020},
 }
 
-@misc{banco_central_financial_2021-1,
+@misc{banco_central_financial_2021,
 	title = {Financial {Stability} {Report}: second half 2021},
 	author = {Banco Central},
 	year = {2021},
 }
 
-@misc{banco_central_financial_2022-1,
+@misc{banco_central_financial_2022,
 	title = {Financial {Stability} {Report}: second half 2022},
 	author = {Banco Central},
 	year = {2022},
