Add histogram of offer improvements to results
Inserted a new figure displaying the distribution of offer improvements (figures/IE3_offer_improvement_histogram.png) in the empirical results section. Updated LaTeX references and auxiliary files accordingly. Also updated related figures.

--- a/empirical_v2.tex
+++ b/empirical_v2.tex
@@ -301,6 +301,17 @@ The table below shows the improvement with respect to the initial offer made by 
 
 \input{Tables/IE3_offer_improvement.tex}
 
+\begin{figure}[H]
+\caption{}
+\label{fig:aux}
+\centering{}%
+\begin{tabular}{cc}
+\includegraphics[scale=0.3]{figures/IE3_offer_improvement_histogram.png}
+\end{tabular}
+\end{figure}
+
+
+
 Figure \ref{fig:aux} shows the summary statistics of the distribution of the different measures of improvement desaggregated by gender. On average men get a higher absolute improvement, but since they also have higher initial offers (due to their higher savings) women get a higher improvement in percentage terms.
 \begin{figure}[H]
 \caption{}
